--- a/config/crd/bases/networking.gke.io_fqdnnetworkpolicies.yaml
+++ b/config/crd/bases/networking.gke.io_fqdnnetworkpolicies.yaml
@@ -60,31 +60,29 @@ spec:
                           on
                         properties:
                           endPort:
-                            description: If set, indicates that the range of ports
-                              from port to endPort, inclusive, should be allowed by
-                              the policy. This field cannot be defined if the port
+                            description: endPort indicates that the range of ports
+                              from port to endPort if set, inclusive, should be allowed
+                              by the policy. This field cannot be defined if the port
                               field is not defined or if the port field is defined
                               as a named (string) port. The endPort must be equal
-                              or greater than port. This feature is in Beta state
-                              and is enabled by default. It can be disabled using
-                              the Feature Gate "NetworkPolicyEndPort".
+                              or greater than port.
                             format: int32
                             type: integer
                           port:
                             anyOf:
                             - type: integer
                             - type: string
-                            description: The port on the given protocol. This can
-                              either be a numerical or named port on a pod. If this
-                              field is not provided, this matches all port names and
-                              numbers. If present, only traffic on the specified protocol
-                              AND port will be matched.
+                            description: port represents the port on the given protocol.
+                              This can either be a numerical or named port on a pod.
+                              If this field is not provided, this matches all port
+                              names and numbers. If present, only traffic on the specified
+                              protocol AND port will be matched.
                             x-kubernetes-int-or-string: true
                           protocol:
                             default: TCP
-                            description: The protocol (TCP, UDP, or SCTP) which traffic
-                              must match. If not specified, this field defaults to
-                              TCP.
+                            description: protocol represents the protocol (TCP, UDP,
+                              or SCTP) which traffic must match. If not specified,
+                              this field defaults to TCP.
                             type: string
                         type: object
                       type: array
@@ -130,31 +128,29 @@ spec:
                           on
                         properties:
                           endPort:
-                            description: If set, indicates that the range of ports
-                              from port to endPort, inclusive, should be allowed by
-                              the policy. This field cannot be defined if the port
+                            description: endPort indicates that the range of ports
+                              from port to endPort if set, inclusive, should be allowed
+                              by the policy. This field cannot be defined if the port
                               field is not defined or if the port field is defined
                               as a named (string) port. The endPort must be equal
-                              or greater than port. This feature is in Beta state
-                              and is enabled by default. It can be disabled using
-                              the Feature Gate "NetworkPolicyEndPort".
+                              or greater than port.
                             format: int32
                             type: integer
                           port:
                             anyOf:
                             - type: integer
                             - type: string
-                            description: The port on the given protocol. This can
-                              either be a numerical or named port on a pod. If this
-                              field is not provided, this matches all port names and
-                              numbers. If present, only traffic on the specified protocol
-                              AND port will be matched.
+                            description: port represents the port on the given protocol.
+                              This can either be a numerical or named port on a pod.
+                              If this field is not provided, this matches all port
+                              names and numbers. If present, only traffic on the specified
+                              protocol AND port will be matched.
                             x-kubernetes-int-or-string: true
                           protocol:
                             default: TCP
-                            description: The protocol (TCP, UDP, or SCTP) which traffic
-                              must match. If not specified, this field defaults to
-                              TCP.
+                            description: protocol represents the protocol (TCP, UDP,
+                              or SCTP) which traffic must match. If not specified,
+                              this field defaults to TCP.
                             type: string
                         type: object
                       type: array
